--- a/desafio/d012/style.css
+++ b/desafio/d012/style.css
@@ -1,11 +1,22 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 *{
     margin: 0;
     padding: 0;
 }
 
 html, body{
+    font-family: var(--fonte1);
     background-color: darkgray;
     min-height: 100vh;
 }
@@ -17,8 +28,10 @@ header{
 }
 
 header > h1{
+    font-family: var(--fonte2);
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
 }
 
 header > p{
@@ -36,10 +49,12 @@ a:hover{
 }
 
 section{
+    font-family: var(--fonte3);
     padding-bottom: 10vh;
     padding-top: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-size: 4.5vw;
 }
 
 section.normal{
@@ -54,7 +69,8 @@ section.imagem{
 
 section.imagem > p{
     background-color: rgba(36, 35, 35, 0.748);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 footer{
