--- a/desafio/d012/style.css
+++ b/desafio/d012/style.css
@@ -57,6 +57,10 @@ section{
     font-size: 4.5vw;
 }
 
+section > p{
+    padding-bottom: 2em;
+}
+
 section.normal{
     background-color: white;
     color: black;
@@ -65,12 +69,28 @@ section.normal{
 section.imagem{
     background-color: rgba(0, 0, 0, 0.474);
     color: white;
+    box-shadow: inset 6px 6px 13px rgba(0, 0, 0, 0.574);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p{
-    background-color: rgba(36, 35, 35, 0.748);
+    background-color: rgba(0, 0, 0, 0.435);
     display: inline-block;
     padding: 5px;
+    text-shadow: 2px 2px 0px black;
+    
+}
+
+section#img01{
+    background-image: url('imagens/background001.jpg');
+    background-position: right center;
+    
+}
+
+section#img02{
+    background-image: url('imagens/background002.jpg');
+    background-size: cover;
 }
 
 footer{
